Fix hidden content issue on mobile devices

--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@ body {
   padding: 0;
   height: 100%;
   width: 100%;
+}
+
+main {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -66,7 +69,9 @@ h1 {
 .result {
   margin: 10px 10px;
   padding: 15px 20px;
+  width: 200px;
   font-size: 1.3em;
+  text-align: center;
   background: gray;
   color: white;
   border-bottom: 5px solid black;
